--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/joy_tester
-	previous = 
-	base = 3c86829
+	previous = 3c86829
+	base = 77b257b
 	trim = 
 	trimbase = 
