--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/joy_tester
-	previous = 
-	base = e0417fe
+	previous = e0417fe
+	base = 87d3c78
 	trim = 
 	trimbase = 
