--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/joy_tester
-	previous = 
-	base = e95963f
+	previous = e95963f
+	base = 99d9675
 	trim = 
 	trimbase = 
