--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/joy_tester
-	previous = 
-	base = 2d401bb
+	previous = 2d401bb
+	base = fd88914
 	trim = 
 	trimbase = 
