--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/joy_tester
-	previous = 
-	base = 60689ca
+	previous = 60689ca
+	base = b4bc77a
 	trim = 
 	trimbase = 
