--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/joy_tester
-	previous = 
-	base = 410dcab
+	previous = 410dcab
+	base = 45aae9c
 	trim = 
 	trimbase = 
