--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/joy_tester
-	previous = 
-	base = d53eb28
+	previous = d53eb28
+	base = 37d94f5
 	trim = 
 	trimbase = 
