--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/joy_tester
-	previous = 
-	base = e01254d
+	previous = e01254d
+	base = 64242d6
 	trim = 
 	trimbase = 
