--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/joy_tester
-	previous = 
-	base = c285b0e
+	previous = c285b0e
+	base = 9ad731f
 	trim = 
 	trimbase = 
