--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/joy_tester
-	previous = 
-	base = 6819da5
+	previous = 6819da5
+	base = 04b80cb
 	trim = 
 	trimbase = 
