--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/joy_tester
-	previous = 
-	base = 342e918
+	previous = 342e918
+	base = 42fe4a2
 	trim = 
 	trimbase = 
