--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.2-2": ["Tue Mar 21 2023", "Josh Newans", "josh.newans@gmail.com"]}
+{"0.0.2-3": ["Thu Apr 20 2023", "Josh Newans", "josh.newans@gmail.com"], "0.0.2-2": ["Tue Mar 21 2023", "Josh Newans", "josh.newans@gmail.com"]}
