--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/joy_tester
-	previous = 
-	base = 4898a0d
+	previous = 4898a0d
+	base = c6e23f3
 	trim = 
 	trimbase = 
