--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/joy_tester
-	previous = 
-	base = 5e7f9a0
+	previous = 5e7f9a0
+	base = d82331e
 	trim = 
 	trimbase = 
