--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/joy_tester
-	previous = 
-	base = 6cdf1a3
+	previous = 6cdf1a3
+	base = d168d2c
 	trim = 
 	trimbase = 
