--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/joy_tester
-	previous = 
-	base = df13214
+	previous = df13214
+	base = 09a0b7c
 	trim = 
 	trimbase = 
