--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.2-3": ["Wed Mar 06 2024", "Josh Newans", "josh.newans@gmail.com"]}
+{"0.0.2-4": ["Tue Apr 22 2025", "Josh Newans", "josh.newans@gmail.com"], "0.0.2-3": ["Wed Mar 06 2024", "Josh Newans", "josh.newans@gmail.com"]}
